<resources>
    <string name="app_name">Amo pizza</string>
    <string name="_25">25 см</string>
    <string name="Pizza">Пицца</string>
    <string name="margarita">margarita</string>
    <string name="_30">30 см</string>
    <string name="_35">35 см</string>
    <string name="_40">40 см</string>
    <string name="newyork">newyork</string>
    <string name="pizza_image">pizza image</string>
    <string name="menu">Меню</string>
    <string name="pizzaButton">Пицца</string>
    <string name="r">Р</string>
    <string name="rub_image">rub_image</string>
    <string name="name_pizza_activity">name_pizza_activity"</string>

</resources>
