<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/pizza_image"
        android:id="@+id/image"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/title"
        android:textColor="#4E342E"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/description"
        android:textColor="#4E342E"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:id="@+id/buttons">

        <Button
            android:id="@+id/button1"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"

            android:text="@string/_25"
            android:textColor="#FFAB91"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:text="@string/_30"
            android:textColor="#FFAB91"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:text="@string/_35"
            android:textColor="#FFAB91"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:background="#FFFFFF"
            android:text="@string/_40"
            android:textColor="#FFAB91"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:textColor="#4E342E"
        android:textSize="20sp" />

</LinearLayout>